# tiny-shop

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  rust-clippy.yml  snyk-security.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  projection.rs  repository.rs  search.rs  taxonomy.rs
crates/catalog/tests/: bdd.rs  projection_search.rs  taxonomy_repo.rs
crates/catalog/tests/features/: catalog_taxonomy.feature
crates/db/: Cargo.toml
crates/db/src/: inbox.rs  lib.rs  outbox.rs  relay.rs  repository.rs
crates/db/tests/: relay_outbox.rs
crates/identity/: Cargo.toml
crates/identity/src/: account.rs  account_repo.rs  lib.rs  session.rs  session_repo.rs
crates/identity/tests/: identity_repo.rs
crates/orders/: Cargo.toml
crates/orders/src/: cart.rs  cart_repo.rs  lib.rs  order.rs  repository.rs
crates/orders/tests/: cart_repo.rs  order_repo.rs
crates/payments/: Cargo.toml
crates/payments/src/: lib.rs
crates/product/: Cargo.toml
crates/product/src/: extras.rs  lib.rs  product.rs  repository.rs
crates/product/tests/: product_repo.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tiny-shop/: Cargo.toml
crates/tiny-shop/src/: main.rs
crates/web/: Cargo.toml
crates/web/assets/css/: vuriy.css
crates/web/src/: cart_cookie.rs  error.rs  jsonld.rs  lib.rs  state.rs
crates/web/src/routes/: cart.rs  category.rs  checkout.rs  home.rs  mod.rs  product.rs  robots.rs  sitemap.rs
crates/web/src/view/: breadcrumb.rs  layout.rs  mod.rs
crates/web/tests/: cart_page.rs  category_page.rs  checkout_page.rs  home_page.rs  product_page.rs  sitemap.rs
migrations/catalog/: 0001_outbox_inbox.sql  0002_taxonomy.sql  0003_projection.sql
migrations/identity/: 0001_outbox.sql  0002_identity.sql
migrations/orders/: 0001_outbox.sql  0002_orders.sql  0003_cart.sql  0004_order_contact.sql
migrations/product/: 0001_outbox.sql  0002_product.sql
