[package]
name = "catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shared = { workspace = true }
db = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
