[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shared = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
