[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shared = { workspace = true }
db = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
