[package]
name = "product"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shared = { workspace = true }
db = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
