[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
catalog = { workspace = true }
shared = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
db = { workspace = true }
shared = { workspace = true }
