[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
maud = { workspace = true }
percent-encoding = "2"
serde = { workspace = true }
serde_json = { workspace = true }
catalog = { workspace = true }
orders = { workspace = true }
shared = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
db = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
